--- a/language/en-GB/en-GB.tpl_easydayz.ini
+++ b/language/en-GB/en-GB.tpl_easydayz.ini
@@ -20,3 +20,8 @@ TPL_EASYDAYZ_FONT_NAME_DESC="Example: Open+Sans or Source+Sans+Pro."
 TPL_EASYDAYZ_LOGO_LABEL="Logo"
 TPL_EASYDAYZ_LOGO_DESC="Select or upload a custom logo for the site template."
 TPL_EASYDAYZ_STATIC="Static"
+
+TPL_EASYDAYZ_SIGN_IN="Sign In"
+TPL_EASYDAYZ_SIGN_UP="Sign Up"
+TPL_EASYDAYZ_LOG_IN="Log In"
+TPL_EASYDAYZ_LOG_OUT="Log Out"
