--- a/language/en-GB/en-GB.tpl_easydayz.sys.ini
+++ b/language/en-GB/en-GB.tpl_easydayz.sys.ini
@@ -3,23 +3,14 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-TPL_EASYDAYZ_POSITION_BANNER="Banner"
-TPL_EASYDAYZ_POSITION_DEBUG="Debug"
+
 TPL_EASYDAYZ_POSITION_POSITION-0="Search"
-TPL_EASYDAYZ_POSITION_POSITION-10="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-11="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-12="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-13="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-14="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-15="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-1="Navigation"
-TPL_EASYDAYZ_POSITION_POSITION-2="Breadcrumbs"
-TPL_EASYDAYZ_POSITION_POSITION-3="Top center"
-TPL_EASYDAYZ_POSITION_POSITION-4="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-5="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-6="Unused"
-TPL_EASYDAYZ_POSITION_POSITION-7="Right"
+TPL_EASYDAYZ_POSITION_POSITION-1="User Menu"
+TPL_EASYDAYZ_POSITION_POSITION-2="Menu"
+TPL_EASYDAYZ_POSITION_POSITION-3="Main Down"
+TPL_EASYDAYZ_POSITION_POSITION-4="SideBar"
+TPL_EASYDAYZ_POSITION_POSITION-5="Before Footer"
+TPL_EASYDAYZ_POSITION_POSITION-6="First column Footer"
+TPL_EASYDAYZ_POSITION_POSITION-7="Second column Footer"
 TPL_EASYDAYZ_POSITION_POSITION-8="Left"
-TPL_EASYDAYZ_POSITION_POSITION-9="Unused"
-TPL_EASYDAYZ_POSITION_FOOTER="Footer"
 TPL_EASYDAYZ_XML_DESCRIPTION="Continuing the space theme (Solarflare from 1.0 and Milkyway from 1.5), EASYDAYZ is the Joomla 3 site template based on Bootstrap from Twitter and the launch of the Joomla User Interface library (JUI)."
